--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.ts",
   "bin": {
-    "my-cli": "./bin/index.ts"
+    "my": "./bin/index.ts"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:comment": "启动开发环境",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "eslint": "eslint --fix src --ext .ts --max-warnings=0",
+    "commit": "cz"
   },
   "keywords": [],
   "author": "",
@@ -15,14 +19,33 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
+    "didyoumean": "^1.2.2",
     "download-git-repo": "^3.0.2",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.1.2",
     "mem-fs": "^2.2.1",
     "mem-fs-editor": "^9.3.0",
-    "ora": "^6.0.0"
+    "ora": "^6.0.0",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
-    "@types/node": "^16.7.8"
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^8.1.3",
+    "@types/mem-fs-editor": "^7.0.1",
+    "@types/node": "^16.7.8",
+    "@types/semver": "^7.3.9",
+    "cz-conventional-changelog": "^3.3.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
+  },
+  "engines": {
+    "node": "14.x|16.x"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
