--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "cli-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "./bin/index.js",
   "bin": {
-    "my": "./bin/index.ts"
+    "my": "./bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:comment": "启动开发环境",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "eslint": "eslint --fix src --ext .ts --max-warnings=0",
+    "prettier": "prettier --write \"src/**/*.ts\"",
+    "build": "npm run eslint && npm run prettier && tsc --build",
     "commit": "cz"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "clear-console": "^1.1.0",
     "commander": "^8.1.0",
     "didyoumean": "^1.2.2",
     "download-git-repo": "^3.0.2",
@@ -26,7 +28,8 @@
     "mem-fs": "^2.2.1",
     "mem-fs-editor": "^9.3.0",
     "ora": "^6.0.0",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
@@ -36,7 +39,12 @@
     "@types/mem-fs-editor": "^7.0.1",
     "@types/node": "^16.7.8",
     "@types/semver": "^7.3.9",
+    "@types/shelljs": "^0.8.9",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.1.0",
+    "prettier": "^2.4.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
